# pgorm

./: CHANGELOG.md  COMMUNITY.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
examples/basic/: Cargo.toml  import.sh
examples/basic/src/: example_cake.rs  example_cake_filling.rs  example_filling.rs  example_fruit.rs  main.rs  operation.rs  sea_orm_active_enums.rs  select.rs
examples/graphql_example/migration/: Cargo.toml
examples/graphql_example/migration/src/: m20220101_000001_create_table.rs  main.rs
examples/rocket_example/entity/: Cargo.toml
examples/rocket_example/entity/src/: post.rs
examples/rocket_example/service/: Cargo.toml
examples/rocket_example/service/tests/: mock.rs  prepare.rs
examples/salvo_example/service/: Cargo.toml
examples/salvo_example/service/src/: lib.rs
examples/salvo_example/service/tests/: mock.rs
examples/seaography_example/migration/: Cargo.toml  README.md
examples/seaography_example/migration/src/: lib.rs  m20230101_000001_create_bakery_table.rs  m20230101_000002_create_baker_table.rs  m20230101_000003_create_cake_table.rs  m20230101_000004_create_cake_baker_table.rs  m20230102_000001_seed_bakery_data.rs
issues/262/: Cargo.toml
issues/262/src/: cake.rs  main.rs
issues/630/: Cargo.toml  README.md
issues/630/src/: main.rs
issues/630/src/entity/: mod.rs  prelude.rs  underscores.rs  underscores_workaround.rs
issues/86/: Cargo.toml
issues/86/src/: cake.rs  main.rs
issues/892/: Cargo.toml
issues/892/src/: main.rs
pgorm-codegen/: Cargo.toml  README.md
pgorm-codegen/src/: util.rs
pgorm-codegen/src/entity/: active_enum.rs  base_entity.rs  column.rs  relation.rs  transformer.rs  writer.rs
pgorm-codegen/src/tests_cfg/duplicated_many_to_many_paths/: bills.rs  users.rs  users_saved_bills.rs  users_votes.rs
pgorm-codegen/src/tests_cfg/many_to_many/: bills.rs  users.rs
pgorm-codegen/src/tests_cfg/many_to_many_multiple/: bills.rs  users.rs  users_votes.rs
pgorm-codegen/src/tests_cfg/self_referencing/: bills.rs  users.rs
pgorm-codegen/tests/compact/: cake.rs  cake_filling.rs  cake_filling_price.rs  cake_with_double.rs  cake_with_float.rs  child.rs  collection.rs  collection_float.rs  filling.rs  fruit.rs  mod.rs  parent.rs  rust_keyword.rs  vendor.rs
pgorm-codegen/tests/compact_with_attributes/: cake_multiple.rs  cake_one.rs
pgorm-codegen/tests/compact_with_derives/: cake_multiple.rs  cake_none.rs  cake_one.rs
pgorm-codegen/tests/compact_with_schema_name/: cake.rs  cake_filling.rs  cake_filling_price.rs  cake_with_double.rs  cake_with_float.rs  child.rs  collection.rs  collection_float.rs  filling.rs  fruit.rs  parent.rs  prelude.rs  rust_keyword.rs  vendor.rs
pgorm-codegen/tests/compact_with_serde/: cake_both.rs  cake_deserialize.rs  cake_serialize.rs  cake_serialize_with_hidden_column.rs
pgorm-codegen/tests/expanded/: cake.rs  cake_filling.rs  cake_filling_price.rs  cake_with_double.rs  cake_with_float.rs  child.rs  collection.rs  collection_float.rs  filling.rs  fruit.rs  mod.rs  parent.rs  rust_keyword.rs  vendor.rs
pgorm-codegen/tests/expanded_with_attributes/: cake_multiple.rs  cake_none.rs  cake_one.rs
pgorm-codegen/tests/expanded_with_derives/: cake_multiple.rs  cake_one.rs
pgorm-codegen/tests/expanded_with_schema_name/: cake.rs  cake_filling.rs  cake_filling_price.rs  cake_with_double.rs  cake_with_float.rs  child.rs  collection.rs  collection_float.rs  filling.rs  fruit.rs  parent.rs  rust_keyword.rs  vendor.rs
pgorm-codegen/tests/expanded_with_serde/: cake_both.rs  cake_deserialize.rs  cake_none.rs  cake_serialize.rs  cake_serialize_with_hidden_column.rs
pgorm-codegen/tests/postgres/: binary_json.rs  binary_json_expanded.rs
pgorm-codegen/tests/with_seaography/: cake.rs  cake_expanded.rs
pgorm-migration/: Cargo.toml  README.md
pgorm-migration/src/: lib.rs  manager.rs  migrator.rs  prelude.rs  schema.rs  seaql_migrations.rs
pgorm-migration/tests/: main.rs
pgorm-migration/tests/common/migration/: m20220118_000001_create_cake_table.rs  m20220118_000002_create_fruit_table.rs  m20220118_000003_seed_cake_table.rs  m20220118_000004_create_tea_enum.rs  m20220923_000001_seed_cake_table.rs  m20230109_000001_seed_cake_table.rs
pgorm-migration/tests/common/migrator/: default.rs  override_migration_table_name.rs
pgorm-pool/: CHANGELOG.md  Cargo.toml  README.md
pgorm-pool/src/: config.rs  generic_client.rs  lib.rs
pgorm-pool/tests/: async_trait.rs  postgres.rs
pgorm-query/: CHANGELOG.md  Cargo.toml  README.md
pgorm-query/benches/: basic.rs
pgorm-query/build-tools/: publish.sh  rustclippy.sh  rustfmt.sh
pgorm-query/pgorm-query-attr/: Cargo.toml
pgorm-query/pgorm-query-attr/src/: lib.rs
pgorm-query/pgorm-query-attr/tests/pass/: default.rs  prefixed.rs  suffixed.rs  table_iden.rs
pgorm-query/pgorm-query-derive/: Cargo.toml
pgorm-query/pgorm-query-derive/src/: error.rs  iden_variant.rs  lib.rs
pgorm-query/pgorm-query-derive/tests/compile-fail/: empty_list_iden.rs  mutli_field_flatten.rs  path_iden.rs  path_method.rs  unsupported_container.rs  wrong_literal_type.rs
pgorm-query/pgorm-query-derive/tests/pass-static/: 3_level_flatten.rs  flattened_named.rs  flattened_unnamed.rs  meta_list_renaming_everything.rs  (+4 more)
pgorm-query/src/: error.rs  expr.rs  extension.rs  func.rs  lib.rs  prepare.rs  schema.rs  tests_cfg.rs  types.rs  value.rs
pgorm-query/src/backend/: mod.rs  query_builder.rs
pgorm-query/src/foreign_key/: create.rs  drop.rs
pgorm-query/src/index/: create.rs  drop.rs
pgorm-query/src/query/: case.rs  condition.rs  delete.rs  insert.rs  on_conflict.rs  ordered.rs  returning.rs  select.rs  traits.rs  update.rs  window.rs  with.rs
pgorm-query/src/table/: alter.rs  column.rs  create.rs  drop.rs  mod.rs  rename.rs  truncate.rs
pgorm-query/tests/: common.rs
pgorm-query/tests/derive/: mod.rs
pgorm-query/tests/error/: mod.rs
pgorm-query/tests/postgres/: foreign_key.rs  index.rs  mod.rs  query.rs  table.rs  types.rs
sea-orm-migration/: Cargo.toml
sea-orm-migration/src/: lib.rs  manager.rs  migrator.rs  prelude.rs  schema.rs
src/: docs.rs  (+3 more)
(+362 files in other folders)
