[package]
name = "pgorm-migration"
version = "0.0.0"
authors = []
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.65"
publish = false

[dependencies]
async-trait = { version = "0.1", default-features = false }
pgorm = { path = "..", features = ["macros"] }
# pgorm-cli = { path = "../pgorm/pgorm-cli", default-features = false, optional = true }
# sea-schema = { version = "0.15.0" }
tracing = { version = "0.1", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }
futures = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[features]
default = []
# sqlx-mysql = ["pgorm/sqlx-mysql"]
# sqlx-postgres = ["pgorm/sqlx-deadpool-postgres"]
# # sqlx-sqlite = ["pgorm/sqlx-sqlite"]
# # sqlite-use-returning-for-3_35 = ["pgorm/sqlite-use-returning-for-3_35"]
# # runtime-actix-native-tls = ["pgorm/runtime-actix-native-tls"]
# # runtime-async-std-native-tls = ["pgorm/runtime-async-std-native-tls"]
# # runtime-tokio-native-tls = ["pgorm/runtime-tokio-native-tls"]
# # runtime-actix-rustls = ["pgorm/runtime-actix-rustls"]
# # runtime-async-std-rustls = ["pgorm/runtime-async-std-rustls"]
# runtime-tokio-rustls = ["pgorm/runtime-tokio-rustls"]
# with-json = ["pgorm/with-json"]
# with-chrono = ["pgorm/with-chrono"]
# with-rust_decimal = ["pgorm/with-rust_decimal"]
# # with-bigdecimal = ["pgorm/with-bigdecimal"]
# with-uuid = ["pgorm/with-uuid"]
# # with-time = ["pgorm/with-time"]
