[package]
name = "pgorm-pool"
version = "0.14.1"
edition = "2024"
rust-version = "1.85"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
description = "Dead simple async pool for tokio-postgres"
keywords = ["async", "database", "pool", "postgres"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/bikeshedder/deadpool"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

[dependencies]
async-trait.workspace = true # = "0.1.80"
deadpool.workspace = true
serde.workspace = true
# = { package = "serde", version = "1.0", features = [
#     "derive",
# ], optional = true }
tokio.workspace = true # = { version = "1.29", features = ["rt"] }
tracing.workspace = true # = "0.1.37"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-postgres.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
tokio-postgres = { version = "0.7.9", default-features = false }

[dev-dependencies]
config = { version = "0.14", features = ["json"] }
dotenvy = "0.15.0"
futures = "0.3.1"
futures-util = "0.3.30"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
