# [workspace]
# members = [".", "pgorm-query-derive"]

[package]
name = "pgorm-query"
version = "0.32.0-rc.1"
authors = [
    "Chris Tsang <chris.2y3@outlook.com>",
    "Billy Chan <ccw.billy.123@gmail.com>",
    "Ivan Krivosheev <py.krivosheev@gmail.com>",
]
edition = "2021"
description = "A dynamic query builder for Postgres"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/pgorm-query"
repository = "https://github.com/SeaQL/sea-query"
categories = ["database"]
keywords = ["database", "sql", "postgres"]
rust-version = "1.62"
# STUB

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "pgorm_query"
path = "src/lib.rs"

[dependencies]
inherent = "1.0"
pgorm-query-attr = { version = "0.1.1", path = "pgorm-query-attr", default-features = false, optional = true }
pgorm-query-derive = { version = "0.4.0", path = "pgorm-query-derive", default-features = false, optional = true }
serde_json = { version = "1", default-features = false, features = ["std"] }
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
postgres-types = { version = "0", default-features = false }
pgvector = { version = "~0.4", default-features = false }
rust_decimal = { version = "1", default-features = false }
# bigdecimal = { version = "0.4", default-features = false, optional = true }
uuid = { version = "1", default-features = false }
# time = { version = "0.3.19", default-features = false, optional = true, features = ["macros", "formatting"] }
ipnetwork = { version = "0.21", default-features = false }
mac_address = { version = "1.1", default-features = false }
# ordered-float = { version = "4.6", default-features = false, optional = true }

[dev-dependencies]
pgorm-query = { workspace = true, features = ["tests-cfg"] }
criterion = { version = "0.5" }
pretty_assertions = { version = "1" }

[features]
default = ["derive"]
derive = ["pgorm-query-derive"]
attr = ["pgorm-query-attr"]
# hashable-value = ["educe", "ordered-float"]
tests-cfg = []
all-features = [
    "derive",
    "attr",
]

[[test]]
name = "test-derive"
path = "tests/derive/mod.rs"
required-features = ["derive"]

[[test]]
name = "test-error"
path = "tests/error/mod.rs"
required-features = ["tests-cfg"]

[[test]]
name = "test-postgres"
path = "tests/postgres/mod.rs"
required-features = ["tests-cfg"]

[[bench]]
name = "basic"
harness = false
