[package]
name = "sea-orm-migration"
version = "0.0.0"
authors = []
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.65"
publish = false

[dependencies]
async-trait = { version = "0.1", default-features = false }
sea-orm = { path = "..", features = ["macros"] }
# sea-orm-cli = { path = "../sea-orm/sea-orm-cli", default-features = false, optional = true }
# sea-schema = { version = "0.15.0" }
tracing = { version = "0.1", default-features = false, features = ["log"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }
futures = { version = "0.3", default-features = false, features = ["std"] }

[dev-dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[features]
default = []
# sqlx-mysql = ["sea-orm/sqlx-mysql"]
# sqlx-postgres = ["sea-orm/sqlx-deadpool-postgres"]
# # sqlx-sqlite = ["sea-orm/sqlx-sqlite"]
# # sqlite-use-returning-for-3_35 = ["sea-orm/sqlite-use-returning-for-3_35"]
# # runtime-actix-native-tls = ["sea-orm/runtime-actix-native-tls"]
# # runtime-async-std-native-tls = ["sea-orm/runtime-async-std-native-tls"]
# # runtime-tokio-native-tls = ["sea-orm/runtime-tokio-native-tls"]
# # runtime-actix-rustls = ["sea-orm/runtime-actix-rustls"]
# # runtime-async-std-rustls = ["sea-orm/runtime-async-std-rustls"]
# runtime-tokio-rustls = ["sea-orm/runtime-tokio-rustls"]
# with-json = ["sea-orm/with-json"]
# with-chrono = ["sea-orm/with-chrono"]
# with-rust_decimal = ["sea-orm/with-rust_decimal"]
# # with-bigdecimal = ["sea-orm/with-bigdecimal"]
# with-uuid = ["sea-orm/with-uuid"]
# # with-time = ["sea-orm/with-time"]
