[workspace]
# A separate workspace

[package]
name = "pgorm-example-async-std"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
async-std = { version = "1.12", features = [ "attributes", "tokio1" ] }
pgorm = { path = "../../", features = [ "sqlx-all", "runtime-async-std-native-tls" ] }
serde_json = { version = "1" }
futures = { version = "0.3" }
async-stream = { version = "0.3" }
futures-util = { version = "0.3" }