[workspace]
# A separate workspace

[package]
name = "pgorm-issues-262"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
pgorm = { path = "../../", features = [ "sqlx-all", "runtime-async-std-native-tls", "debug-print" ] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
