[workspace]
# A separate workspace

[package]
name = "pgorm-issues-630"
version = "0.1.0"
authors = ["Erik Rhodes <erik@space-nav.com>"]
edition = "2021"
publish = false

[dependencies]
serde = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[dependencies.pgorm]
path = "../../"
default-features = false
features = ["macros", "runtime-tokio-native-tls", "debug-print", "with-json", "with-chrono"]

[features]
default = ["sqlx-mysql"]
sqlx-mysql = ["pgorm/sqlx-mysql"]
