[workspace]
# A separate workspace

[package]
name = "pgorm-issues-86"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
pgorm = { path = "../../", features = [ "sqlx-all", "runtime-tokio-native-tls", "debug-print" ] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = { version = "0.1" }
