[workspace]
# A separate workspace

[package]
name = "pgorm-issues-892"
version = "0.1.0"
authors = []
edition = "2024"
publish = false

[dependencies]
tokio = { version = "1.20.0", features = ["rt-multi-thread", "macros"] }

[dependencies.pgorm]
path = "../../" # remove this line in your own project
features = ["runtime-tokio-rustls", "tests-cfg", "sqlx-sqlite", "macros"]
default-features = false
