[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
dotenvy = "0.15.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.pgorm-migration]
path = "../../../pgorm-migration" # remove this line in your own project
version = "~1.0.0" # pgorm-migration version
features = [
  # Enable following runtime and db backend features if you want to run migration via CLI
  # "runtime-tokio-native-tls",
  # "sqlx-sqlite",
]
