[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }

[dependencies.pgorm]
path = "../../../" # remove this line in your own project
version = "~1.0.0" # pgorm version
