[package]
name = "rocket-example-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }

[dependencies.pgorm]
path = "../../../" # remove this line in your own project
version = "~1.0.0" # pgorm version
features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    # "sqlx-mysql",
    # "sqlx-sqlite",
]

[dev-dependencies]
tokio = "1.20.0"

[features]
mock = ["pgorm/mock"]

[[test]]
name = "mock"
required-features = ["mock"]
