[workspace]

[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.pgorm]
path = "../../../" # remove this line in your own project
version = "~1.0.0" # pgorm version

[dependencies.pgorm-migration]
path = "../../../pgorm-migration" # remove this line in your own project
version = "~1.0.0" # pgorm-migration version
features = [
  "runtime-async-std-native-tls",
  "sqlx-mysql",
]
